# sot-stabilizer

./: AUTHORS  CMakeLists.txt  README.md
include/sot-stabilizer/: hrp2-decoupled-stabilizer.hh  hrp2-linear-state-space-stabilizer.hh  hrp2-lqr-decoupled-stabilizer.hh  hrp2-lqr-twoDof-coupled-stabilizer.hh  perturbations-generator.hh
include/sot-stabilizer/controllers/: controller-base.hh  discrete-time-lti-lqr.hh  state-space-linear-controller.hh
include/sot-stabilizer/prototyping/: decoupled-elastic-inv-pendulum-simulator.hh  linearized-rotational-table-cart-device.hh  linearized-table-cart-device.hh  non-linear-rotational-table-cart-device.hh  zmp-to-com-algebraic-controller.hh
include/sot-stabilizer/tools/: discrete-time-non-alg-riccati-eqn.hh  hrp2.hpp
python/scripts/: appli_one_hand_compensater.py  appli_two_hands_compensater_kine.py  robotViewerLauncher.py
src/: CMakeLists.txt  discrete-time-lti-lqr.cpp  discrete-time-non-alg-riccati-eqn.cpp  hrp2-decoupled-stabilizer.cpp  hrp2-linear-state-space-stabilizer.cpp  hrp2-lqr-decoupled-stabilizer.cpp  hrp2-lqr-twoDof-coupled-stabilizer.cpp  perturbations-generator.cpp  state-space-linear-controller.cpp
src/dynamic_graph/sot/application/stabilizer/scenarii/: compensater.py~  ds_linear_stabilizer_hrp2.py  ds_lqr_twoDof_coupled_stabilizer_hrp2.py  ds_model_free_observer_stabilizer_hrp2.py  ds_stabilizer.py  ds_stabilizer_hrp2.py  hand_compensater.py  hand_compensater_chicken.py  hand_compensater_oscillator.py  hand_compensater_solver_kine.py  hrp2_linear_stabilizer.py  hrp2_lqr_twoDof_coupled_stabilizer.py  hrp2_lqr_twoDof_coupled_stabilizer_encoders.py  hrp2_model_free_observer_stabilizer.py  hrp2_stabilizer.py  hrp2_stabilizer_simulated_decoupled_model.py  leg_oscillator.py  seqplay_lqr_twoDof_coupled_stabilizer.py  seqplay_lqr_twoDof_coupled_stabilizer_hrp2.py  seqplay_lqr_twoDof_coupled_stabilizer_hrp2_encoders.py  seqplay_stabilizer.py  seqplay_stabilizer_hrp2.py
src/dynamic_graph/sot/application/stabilizer/scripts/: appli_ds_stabilizer_hrp.py  (+13 more)
src/prototyping/: command-increment.hh  command-increment_NonLinearRotationalTableCartDevice.hh  decoupled-elastic-inv-pendulum-simulator.cpp  linearized-rotational-table-cart-device.cpp  linearized-table-cart-device.cc  non-linear-rotational-table-cart-device.cpp  simu.py  simuNonLinearRotationalTableCartModel.py  zmp-to-com-algebraic-controller.cpp
unit-testing/: CMakeLists.txt  test_hrp2-linear-state-space-stabilizer.cpp  test_hrp2-lqr-twoDof-coupled-stabilizer.cpp  test_state-space-linear-controller.cpp
